# face-stabilizer

./: .gitignore  Cargo.toml  README.md  flake.nix
landmark-extractor/: Cargo.toml
landmark-extractor/src/: lib.rs
src/: gui.rs  main.rs
stabilizer/: Cargo.toml
stabilizer/src/: lib.rs
