[workspace]
members = ["landmark-extractor/"]

[package]
name = "face-stabilizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "env"] }
log = "0.4.19"
anyhow = "1.0.72"
env_logger = "0.10.0"
dlib-face-recognition.git = "https://github.com/ulagbulag/dlib-face-recognition.git"
image = "0.24.6"
landmark-extractor.path = "./landmark-extractor"
rayon = "1.7.0"
ron = "0.8.0"
indicatif = "0.17.5"
