[workspace]
members = ["landmark-extractor/", "stabilizer"]

[package]
name = "face-stabilizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
dlib-face-recognition = "0.3.2"
# dlib-face-recognition uses image v0.24 so we need to pin image and imageproc to make use of the same version
image = "0.24.9"
imageproc = "0.23.0"
log = "0.4.19"
serde = "1.0.204"

[dependencies]
clap = { version = "4.3.19", features = ["derive", "env"] }
dlib-face-recognition.workspace = true
env_logger = "0.11.3"
image.workspace = true
imageproc.workspace = true
indicatif = "0.17.5"
landmark-extractor.path = "./landmark-extractor"
log.workspace = true
miette = { version = "7.2.0", features = ["fancy"] }
rayon = { version = "1.7.0", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.120"
stabilizer.path = "./stabilizer"

[features]
default = ["rayon"]
rayon = ["dep:rayon", "indicatif/rayon"]
