[package]
name = "landmark-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlib-face-recognition.workspace = true
serde = { version = "1.0.178", optional = true, features = ["derive"] }
image = { workspace = true, optional = true }

[features]
default = ["serde", "image"]
